# CTestDemo

./: CMakeLists.txt  README.md
src/: dnn_test.cpp  main.cpp
